[metadata]
name = notepy
version = 1.0a1
author = ccrsxx
author_email = aminrisal@gmail.com
description = 'A simple CLI for taking notes'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccrsxx/notepy
project_urls =
    Bug Tracker = https://github.com/ccrsxx/notepy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = notepy
packages = find:
python_requires = >=3.6

[options.packages.find]
where = notepy