[metadata]
name = clippynote
version = 1.0a5
author = ccrsxx
author_email = aminrisal@gmail.com
description = 'A simple CLI for taking notes'
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ccrsxx/clippynote
project_urls =
    Bug Tracker = https://github.com/ccrsxx/clippynote/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = pyperclip

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    note = clippynote:cli.run_cli
